[metadata]
name = lab_data_logger
description = A (distributed) data logger for the (physics) lab.
url = https://github.com/bleykauf/lab_data_logger
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.5
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    click
    rpyc
    influxdb
packages = find:

[options.packages.find]
exclude =
    examples

[options.entry_points]
console_scripts = 
    ldl = lab_data_logger.cli.cli:ldl

[versioneer]
VCS = git
style = pep440
versionfile_source = lab_data_logger/_version.py
versionfile_build = lab_data_logger/_version.py
tag_prefix =
parentdir_prefix = lab_data_logger-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
    lab_data_logger/logger.py: F524
exclude = lab_data_logger/_version.py
max-line-length = 88
extend-ignore = E203